# cn

./: .git-blame-ignore-revs  .gitignore  .ocamlformat  CONTRIBUTING.md  Dockerfile.devcontainer  Dockerfile.redhat  Dockerfile.ubuntu  LICENSE  Makefile  ONBOARDING.md  README.md  THIRD_PARTY_FILES.md  _CoqProject  cn-coq.opam  cn.opam  dune  dune-project
lib/: alloc.ml  builtins.ml  cLogicalFuns.ml  cStatements.ml  check.ml  checkPredicates.ml  cn_internal_to_ail.ml  compile.ml  compile.mli  consistent.ml  context.ml  core_to_mucore.ml  definition.ml  definition.mli  diagnostics.ml  dune  effectful.ml  error_common.ml  executable_spec.ml  executable_spec_extract.ml  executable_spec_records.ml  explain.ml  global.ml  indexTerms.ml  lemmata.ml  list.ml  locations.ml  memory.ml  ownership_exec.ml  pack.ml  parse.ml  pp.ml  pp_mucore.ml  pp_mucore_ast.ml  pp_mucore_coq.ml  prooflog.ml  prooflog.mli  report.ml  report.mli  request.ml  (+17 more)
lib/bugExplanation/: bugExplanation.mli  replicators.ml  shapeAnalyzers.ml  shapeAnalyzers.mli
lib/fulminate/: cn_internal_to_ail.ml  cn_to_ail.ml  cn_to_ail.mli  executable_spec.ml  executable_spec_extract.ml  executable_spec_extract.mli  executable_spec_gen_injections.ml  executable_spec_gen_injections.mli  executable_spec_internal.ml  executable_spec_internal.mli  executable_spec_records.ml  executable_spec_utils.ml  executable_spec_utils.mli  extract.ml  fulminate.ml  fulminate.mli  internal.ml  internal.mli  ownership.ml  ownership.mli  ownership_exec.ml  ownership_exec.mli  records.ml  records.mli  source_injection.ml  utils.ml  (+2 more)
(+229 files in other folders)
