opam-version: "2.0"
synopsis: "The CN type system"
description: "The CN type system"
maintainer: ["Christopher Pulte <cp526@cl.cam.ac.uk>"]
authors: [
  "Christopher Pulte"
  "Thomas Sewell"
  "Dhruv Makwana"
  "Rini Banerjee"
  "Zain K Aamer"
]
license: "BSD-2-Clause"
homepage: "https://rems-project.github.io/cn-tutorial"
bug-reports: "https://github.com/rems-project/cn/issues"
depends: [
  "cerberus-lib"
  "monomorphic"
  "ocaml" {>= "4.14.0"}
  "ppx_deriving"
  "ppx_deriving_yojson" {>= "3.8.0"}
  "cmdliner"
  "ocamlgraph"
  "zarith" {>= "1.13"}
]
pin-depends: [
  ["cerberus-lib.dev" "git+https://github.com/rems-project/cerberus.git#ef237b3"]
]
build: [
  ["dune" "subst"] {pinned}
  ["dune"
    "build"
    "-p"
    name
    "--profile=release"
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
